--- a/res/values/pex_strings.xml
+++ b/res/values/pex_strings.xml
@@ -27,4 +27,7 @@
     <string name="reset">Reset</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+
+    <!-- Statusbar items -->
+    <string name="statusbar_items_category">Statusbar items</string>
 </resources>
