--- a/res/values/pex_strings.xml
+++ b/res/values/pex_strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 Nitrogen Project
+<!-- Copyright (C) 2021 The ProjectStreak
+     Copyright (C) 2022 The PixelExperienceX Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,9 +14,17 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/lockscreen_title"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Streak Tweaks Title -->
+    <string name="pex_tweaks_title">PixelExperienceX Tweaks</string>
 
-</PreferenceScreen>
+    <!-- Categories -->
+    <string name="statusbar_title">Statusbar</string>
+    <string name="misc_title">Miscellaneous</string>
+
+    <!-- General strings -->
+    <string name="ok">OK</string>
+    <string name="reset">Reset</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
+</resources>
