--- a/res/xml/pex_tweaks.xml
+++ b/res/xml/pex_tweaks.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2012-2014 The TeamEos Project
+<!-- Copyright (C) 2016 Nitrogen Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,8 +13,22 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    android:title="@string/pex_tweaks_title" >
+
+        <!-- StatusBar -->
+        <Preference
+            android:key="statusbar_category"
+            android:title="@string/statusbar_title" 
+            android:fragment="com.pex.tweaks.fragments.StatusBarSettings"
+            android:icon="@drawable/ic_settings_statusbar"/>
+
+        <!-- Misc -->
+        <Preference
+            android:key="misc_category"
+            android:title="@string/misc_title" 
+            android:fragment="com.pex.tweaks.fragments.MiscSettings"
+            android:icon="@drawable/ic_settings_misc"/>
 
 </PreferenceScreen>
